--- a/home/home.html
+++ b/home/home.html
@@ -28,7 +28,31 @@
             </ul>
         </div>
     </div>
-    <div class="slide"></div>
+    <div class="slidershow">
+        <div class="slides">
+            <input type="radio" name="bottom" id="bottom_1" checked>
+            <input type="radio" name="bottom" id="bottom_2">
+            <input type="radio" name="bottom" id="bottom_3">
+            <div class="slide s1">
+                <h1>SEVENTH COLLECTION</h1>
+                <img src="/image/product/1.jpg" alt="">
+            </div>
+            <div class="slide s2">
+                <h1>ESSENTIALS
+                    <br> CALIFORNIA WINTER 2020</h1>
+                <img src="/image/product/3.jpg" alt="">
+            </div>
+            <div class="slide">
+                <h1>FEAR OF GOD ATHLETICS</h1>
+                <img src="/image/product/2.jpg" alt="">
+            </div>
+        </div>
+        <div class="navigation">
+            <label for="bottom_1" class="bar"></label>
+            <label for="bottom_2" class="bar"></label>
+            <label for="bottom_3" class="bar"></label>
+        </div>
+    </div>
     <div class="main-content">
         <div class="clear-fix">
             <div class="col col-3">
