--- a/home/home.html
+++ b/home/home.html
@@ -35,16 +35,16 @@
             <input type="radio" name="bottom" id="bottom_3">
             <div class="slide s1">
                 <h1>SEVENTH COLLECTION</h1>
-                <img src="/image/product/1.jpg" alt="">
+                <img src="../image/product/1.jpg" alt="">
             </div>
             <div class="slide s2">
                 <h1>ESSENTIALS
                     <br> CALIFORNIA WINTER 2020</h1>
-                <img src="/image/product/3.jpg" alt="">
+                <img src="../image/product/3.jpg" alt="">
             </div>
             <div class="slide">
                 <h1>FEAR OF GOD ATHLETICS</h1>
-                <img src="/image/product/2.jpg" alt="">
+                <img src="../image/product/2.jpg" alt="">
             </div>
         </div>
         <div class="navigation">
@@ -58,7 +58,7 @@
             <div class="col col-3">
                 <a href="">
                     <h1>FEAR OF GOD</h1>
-                    <img src="/image/product/5.jpg" alt="">
+                    <img src="../image/product/5.jpg" alt="">
                 </a>
             </div>
             <div class="col col-3">
@@ -66,7 +66,7 @@
                     <h1>
                         ATHLESTIC
                     </h1>
-                    <img src="/image/product/6.jpg" alt="">
+                    <img src="../image/product/6.jpg" alt="">
                 </a>
             </div>
             <div class="col col-3">
@@ -74,7 +74,7 @@
                     <h1>
                         ESSENTIALS
                     </h1>
-                    <img src="/image/product/4.jpg" alt="">
+                    <img src="../image/product/4.jpg" alt="">
                 </a>
             </div>
         </div>
