--- a/home/home.html
+++ b/home/home.html
@@ -56,7 +56,7 @@
     <div class="main-content">
         <div class="clear-fix">
             <div class="col col-3">
-                <a href="">
+                <a href="../details/details.html">
                     <h1>FEAR OF GOD</h1>
                     <img src="../image/product/5.jpg" alt="">
                 </a>
