--- a/login/login.html
+++ b/login/login.html
@@ -24,11 +24,13 @@
                 <input type="password" name="password" id="password" placeholder="*****">
             </div>
             <div class="btn">
-                <a href="/home/home.html"><button>Đăng nhập</button></a>
+                <button type="submit" id="btnSignIn" onclick="signIn()">Đăng nhập</button>
             </div>
             <!-- </form> -->
         </div>
     </div>
+    <script src="login.js"></script>
+
 </body>
 
 </html>
